fixed space wrapping in showtimes

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1168,6 +1168,7 @@ header {
   color: #cccdd0;
   padding: 2.4rem 1.2rem 0.8rem 1.2rem;
   margin-bottom: 1.8rem;
+  white-space: nowrap;
 }
 
 .showtimes-startime-btn-list {
